Update test: achor-list-item-const-base-class

--- a/css-modules-automation/codemod/tests/anchor-list-item-const-base-class.scss
+++ b/css-modules-automation/codemod/tests/anchor-list-item-const-base-class.scss
@@ -1,6 +1,9 @@
 @import "../../../styles/global-css-settings";
 @import "../../styles/typography";
 
+.before--monday-storybook-anchor-list-item-const-base-class--after {
+}
+
 .monday-storybook-anchor-list-item-const-base-class {
   @include theme-prop(color, link-color);
   font-size: $anchor-font-size;
