--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -30,7 +30,7 @@
       box-sizing: border-box;
       @include theme-prop(border-color, ui-border-color);
       border-radius: 50%;
-      transition: border-width 100ms $expand-animation-timing;
+      transition: border-width var(--motion-productive-medium) var(--expand-animation-timing);
     }
 
     input:checked + &__radio-control {
@@ -38,8 +38,8 @@
       border-width: 0.3em;
       &--label-animation {
         animation-name: radio-checked-animation;
-        animation-duration: 100ms;
-        animation-timing-function: $expand-animation-timing;
+        animation-duration: var(--motion-productive-medium);
+        animation-timing-function: var(--expand-animation-timing);
         animation-fill-mode: forwards;
       }
     }
