--- a/src/components/ExpandCollapse/ExpandCollapse.scss
+++ b/src/components/ExpandCollapse/ExpandCollapse.scss
@@ -63,7 +63,7 @@
   }
 
   .animate-expand-collapse__content {
-    animation: expandContentAnimation var(--motion-productive-medium) var(--expand-animation-timing);
+    animation: expandContentAnimation var(--motion-productive-medium) var(--motion-timing-enter);
   }
 
   @keyframes expandContentAnimation {
