--- a/src/components/Skeleton/Skeleton.scss
+++ b/src/components/Skeleton/Skeleton.scss
@@ -15,7 +15,7 @@
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
     animation-name: shine;
-    animation-timing-function: var(--expand-animation-timing);
+    animation-timing-function: var(--motion-timing-enter);
   }
   @keyframes shine {
     0% {
