fix focus indicator to inset

--- a/src/components/Combobox/components/ComboboxOption/ComboboxOption.scss
+++ b/src/components/Combobox/components/ComboboxOption/ComboboxOption.scss
@@ -33,7 +33,7 @@ $icon-margin: 4px;
   }
 
   &.active-outline {
-    @include focus-style-css();
+    @include focus-style-css-inset();
     background-color: var(--secondary-background-color);
   }
 
