--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -73,11 +73,11 @@
     }
   }
   .monday-style-button--left-icon {
-    padding-right: $spacing-small;
+    margin-right: var(--spacing-small);
   }
 
   .monday-style-button--right-icon {
-    padding-left: $spacing-small;
+    margin-left: var(--spacing-small);
   }
 
   &--size {
