Migration to css modules: Skeleton, story-state-column, TextWithHighlight, VirtualizzedGrid, VirtualizedList

--- a/src/components/VirtualizedList/VirtualizedList.module.scss
+++ b/src/components/VirtualizedList/VirtualizedList.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/themes";
 @import "../../styles/typography";
 
-.virtualized-grid--wrapper {
+.virtualizedListWrapper {
   height: 100%;
   width: 100%;
 }
