--- a/src/components/VirtualizedGrid/VirtualizedGrid.module.scss
+++ b/src/components/VirtualizedGrid/VirtualizedGrid.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/themes";
 @import "../../styles/typography";
 
-.virtualized-list--wrapper {
+.virtualizedGridWrapper {
   height: 100%;
   width: 100%;
 }
