Css modules migration: Tab, TabPanel, TextWithHighlight, VirtualizedGrid, VirtualizedList

--- a/src/components/Tabs/TabPanel/TabPanel.module.scss
+++ b/src/components/Tabs/TabPanel/TabPanel.module.scss
@@ -1,6 +1,6 @@
 @import "../../../styles/themes";
 @import "../../../styles/typography";
 
-.tab-panel--wrapper {
+.tabPanelWrapper {
   @include theme-prop(color, primary-text-color);
 }
