--- a/src/components/ModalHeader/ModalHeader.module.scss
+++ b/src/components/ModalHeader/ModalHeader.module.scss
@@ -1,6 +1,6 @@
 @import "../../styles/themes";
 
-.mondayStyleModalHeader {
+.container {
   display: flex;
   align-items: start;
   flex-direction: column;
