--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/states";
 @import "../../styles/typography";
 
-.monday-style-list {
+.mondayStyleList {
   margin: 0;
   padding: 0;
   overflow: auto;
