--- a/src/components/ListItemIcon/ListItemIcon.module.scss
+++ b/src/components/ListItemIcon/ListItemIcon.module.scss
@@ -1,15 +1,16 @@
 @import "../../styles/themes";
 @import "../../styles/typography";
 
-.list-item-icon {
+.listItemIcon {
   display: flex;
   align-items: center;
   color: var(--primary-text-color);
-  &--start {
-    margin-right: var(--spacing-small);
-  }
+}
 
-  &--end {
-    margin-left: var(--spacing-small);
-  }
+.listItemIconStart {
+  margin-right: var(--spacing-small);
+}
+
+.listItemIconEnd {
+  margin-left: var(--spacing-small);
 }
