--- a/src/components/ModalContent/ModalContent.module.scss
+++ b/src/components/ModalContent/ModalContent.module.scss
@@ -1,6 +1,6 @@
 @import "../../styles/states";
 
-.mondayStyleModalContent {
+.container {
   flex-grow: 1;
   overflow: auto;
   padding-inline-end: 16px;
