--- a/src/components/AttentionBox/AttentionBox.scss
+++ b/src/components/AttentionBox/AttentionBox.scss
@@ -81,15 +81,15 @@
   }
 
   &__close-icon {
-    &.wrapper {
+    &.monday-style-attention-box-component__close-icon {
+      color: var(--primary-text-color);
+    }
+    &--wrapper {
       position: absolute;
       top: $spacing-small-medium;
       right: $spacing-small-medium;
     }
-    &.icon {
-      color: var(--primary-text-color);
-    }
-    &.compact {
+    &--compact {
       top: calc(50% - 16px);
     }
   }
