Add color: var(--disabled-text-color) to disabled checkbox label

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -158,6 +158,7 @@ $checkbox-size: 16px;
       }
       & ~ .monday-style-checkbox__label {
         cursor: not-allowed;
+        color: var(--disabled-text-color);
       }
     }
   }
