Counter, Dialog, DialogContentContainer, Divider, Dropdoown/menu, Dropdoown/option - fix

--- a/src/components/Dropdown/components/menu/menu.module.scss
+++ b/src/components/Dropdown/components/menu/menu.module.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/themes";
 @import "../../../../styles/global-css-settings";
 
-.dropdown-menu-wrapper {
+.dropdownMenuWrapper {
   animation: fadeIn var(--motion-productive-medium) var(--motion-timing-enter);
 }
 
