Clickable, ColorPicker, ColorPickerContentComponent, ColorPickerItemComponent, Combobox, ComboboxCategory, ComboboxOption - fix

--- a/src/components/Combobox/components/ComboboxCategory/ComboboxCategory.module.scss
+++ b/src/components/Combobox/components/ComboboxCategory/ComboboxCategory.module.scss
@@ -2,7 +2,7 @@
 @import "../../../../styles/typography";
 @import "../../../../styles/states";
 
-.combobox-category {
+.comboboxCategory {
   @include theme-prop(color, placeholder-color);
   display: flex;
   align-items: center;
