Remove file uneccesary change

--- a/src/components/Chips/Chips.module.scss
+++ b/src/components/Chips/Chips.module.scss
@@ -30,8 +30,7 @@
     padding-right: var(--spacing-xs);
   }
 
-  .icon,
-  .avatar {
+  .icon, .avatar {
     &.left {
       margin-right: var(--spacing-xs);
     }
