--- a/src/components/Toast/ToastLink/ToastLink.module.scss
+++ b/src/components/Toast/ToastLink/ToastLink.module.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/global-css-settings";
 @import "../../../styles/themes";
 
-.mondayStyleToastActionLink {
+.actionLink {
   @include theme-prop(color, text-color-on-primary);
   text-decoration: underline;
   -webkit-font-smoothing: auto;
